# itp

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  README.md  TODO  requirements.txt  setup.py
extensions/: exponential_smoothing.py
itp/: CMakeLists [conflicted].txt  CMakeLists.txt  __init__.py  basic_types.py  hooks.py  itp_core_bindings.cc  ivisualizer.py  plot.py  statistics_handler.py  task.py  task_pool.py  time_series.py  transformators.py  utils.py  visualizer.py
itp/driver/: __init__.py~  chrono.py  driver.py  driver.py~  executor.py  executor.py~  exp.py~  experiment.py  forecasting_result.py  hooks.py  mpi_executor.py  mpi_tools.py  new_driver.py  plot.py  statistics_handler.py  task.py  task_pool.py  time_series.py  time_series.py~  utils.py  visualizer.py
itp/extensions/: __init__.py  arima.py  exponential_smoothing.py  holt.py  holt_winters.py  itp_predictor.py
itp/lib/ppmd/: ppmd.h
itp/lib/tclap/: StdOutput.h  XorHandler.h
itp/mpi_tools/: __init__.py  mpi_tools.py
itp/predictor/: ICompressor.h  INonCompressionAlgorithm.h  NonCompressionAlgorithmAdaptor.cc  NonCompressionAlgorithmAdaptor.h  PythonCompressor.cc  PythonCompressor.h  __init__.py~  automaton.cc  automaton.h  builders.cc  builders.h  compression_prediction.h  compression_prediction.h.orig  compressors.cc  compressors.h  continuation.h  predictor.cc  predictor.h  predictor.h.orig  primitive_dtypes.h  pyexport.cc  pyexport.cc~  sampler.cc  sampler.h  sdfa.cc  sdfa.h  selector.h  tseries.h  ttransformations (conflicted).h
itp/tests/: NonCompressionAlgorithmMock.h  compressor_mock.h  compressors_facade_mock.h  driver_test.py  gtest_extensions.h  gtest_extensions.h~  predictor_test.py  sampler_mock.h  test_arima.py  test_automation (conflicted).cpp  test_automaton.cc  test_bignums.cc  test_builders.cc  test_chrono.py  test_compressors.cc  test_executor.py  test_executor.py~  test_experiment.py  test_exponential_smoothing.cc  test_exponential_smoothing.py  test_forecasting_result.py  test_non_compression_algorithm_adaptor.cc  test_non_compression_algorithm_integration.py  test_predictor.cc  test_samplers.cc  test_samplers.cc~  test_selector.cc  test_statistics_handler.py  test_task.py  test_task_pool.py  test_time_series.py  test_time_series.py~  test_utils.py  valarray_comparators.h~
itp/utils/: myts.py
lib/itp_core/: CMakeLists.txt
lib/itp_core/include/itp_core/: INonCompressionAlgorithm.h  Predictor.h  Selector.h  predictor.h  selector.h
lib/itp_core/src/: Automaton.cpp  Automaton.h  Bignums.h  Builders.h  Compnames.cpp  Compnames.h  CompressionPrediction.h  Compressors.cpp  Compressors.h  Continuation.cpp  Continuation.h  DataFrame.h  Head.cpp  Head.h  ICompressor.h  ItpExceptions.h  Macro.h  NonCompressionAlgorithmAdaptor.cc  NonCompressionAlgorithmAdaptor.cpp  NonCompressionAlgorithmAdaptor.h  Predictor.cpp  PredictorPrivate.h  PredictorSubtypes.cpp  PredictorSubtypes.h  PreprocInfo.h  PreprocessedTable.h  PrimitiveDataTypes.h  Sampler.cpp  Sampler.h  Sdfa.cpp  Sdfa.h  Selector.cpp  SelectorPrivate.h  TableTransformations.cpp  TableTransformations.h  TimeSeries.h  Types.h  builders.cc  builders.h  compnames.h  (+17 more)
lib/itp_core/tests/: AutomatonTest.cpp  BignumsTest.cpp  BuildersTest.cpp  CompressorMock.h  CompressorsFacadeMock.h  CompressorsTest.cpp  NonCompressionAlgorithmAdaptorTest.cpp  NonCompressionAlgorithmMock.h  PredictorSubtypesTest.cpp  SamplersTest.cpp  SelectorTest.cpp  TimeSeriesTest.cpp  compressor_mock.h  compressors_facade_mock.h  test_automaton.cc  test_bignums.cc  test_builders.cc  test_compressors.cc  test_non_compression_algorithm_adaptor.cc  test_predictor_subtypes.cc  test_samplers.cc  test_selector.cc  test_tseries.cc
lib/tclap/: DocBookOutput.h  UnlabeledMultiArg.h  ValueArg.h
metric_selector/core/: algorithm.py  metric.py  sample_generator.py  selector.py
metric_selector/tests/: selector_test.py
src/: __init__.py  hooks.py  itp_core_bindings.cc  statistics_handler.py  task.py  time_series.py  visualizer.py
src/driver/: driver.py  executor.py  exp.py  time_series.py
src/predictor/: automation.cpp~  automation.h~  automaton.cc  automaton.h  bignums.h  builders.cc  builders.cpp~  builders.h  builders.h~  compnames.cc  compnames.cpp  compression_prediction (conflicted).h  compression_prediction.cc  compression_prediction.cpp  compression_prediction.cpp.orig  compression_prediction.cpp~  compression_prediction.h  compression_prediction.h~  compressors [conflicted].cpp  compressors.cc  compressors.cpp~  compressors.h  continuation.cc  continuation.cpp  continuation.cpp~  continuation.h  continuation.h~  dframe.h  dtypes.h  ftable.h  ftable.h~  head.cpp  itp_exceptions.h  main.cpp  predictor.cc  predictor.h  preproc_info.h  preproc_info.h~  primitive_dtypes.h  primitive_dtypes.h~  (+11 more)
src/predictor.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: #test_automation [conflicted 10].cpp#  #test_automation [conflicted 11].cpp#  #test_automation [conflicted 12].cpp#  #test_automation [conflicted 13].cpp#  #test_automation [conflicted 2].cpp#  #test_automation [conflicted 3].cpp#  #test_automation [conflicted 4].cpp#  #test_automation [conflicted 5].cpp#  #test_automation [conflicted 6].cpp#  #test_automation [conflicted 7].cpp#  #test_automation [conflicted 8].cpp#  #test_automation [conflicted 9].cpp#  #test_automation [conflicted].cpp#  gtest_extensions.h  itp_core_test.py  mock_sampler.h  predictor_test.py  test_automation.cpp~  test_automation_predictor.cpp~  test_automaton.cc  test_bignums.cpp  test_builders.cc  test_builders.cpp~  test_chrono.py  test_exponential_smoothing.py  test_hooks.py  test_non_compression_algorithm_integration.py  test_plot.py  test_predictor [conflicted].cpp  test_predictor.cc  test_samplers.cc  test_statistics_handler.py  test_task.py  test_task_pool.py  test_time_series.py  test_transformators.py  test_tseries.cc  test_tseries.cpp  test_tseries.cpp~
utils/: calc.py
